styled cards on massage page, added collapsible text, made a sliding menu a page hight, put prices at the top

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -9,11 +9,13 @@ import Menu from "./Menu.astro";
     .banner {
         background-color: #CBC0D3;
         padding: 20px 40px;
+        /* position: fixed; */
+        /* width: 100%; */
     }
 
     @media (max-width: 600px) {
         .banner {
-            padding: 20px;
+            padding: 8px 20px;
         }
     }
 </style>
