--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -126,7 +126,7 @@ li :last-child {
 
 .sidepanel  {
   width: 0;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   height: 100%;
   top: 0;
@@ -155,8 +155,8 @@ li :last-child {
 
 .sidepanel .closebtn {
   position: absolute;
-  top: 13px;
-  right: 27px;
+  top: 5px;
+  right: 20px;
   font-size: 36px;
   padding: 8px 16px;
 }
