--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -116,7 +116,7 @@ import Menu from "./Menu.astro";
 }
 
 .banner-padding {
-  padding: 20px;
+  padding: 8px 20px;
 }
 
 .banner-content .header-menu {
