--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -11,45 +11,6 @@ import Footer from "../components/Footer.astro";
         <div class="page-title">
             <h1>Massage</h1>
         </div>
-        <div class="price-section">
-            <!-- <h2>Preise</h2> -->
-            <div class="prices">
-                <p>Klassische Massage 120 CHF pro 60 Minuten</p>
-                <p>Entspannungsmassage 120 CHF pro 60 Minuten</p>
-                <p>Sportmassage 120 CHF pro 60 Minuten</p>
-            </div>
-            <p>
-                Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
-                Zusatzversicherung die Kosten einer Massage voll oder zum Teil.
-                Bitte erkundigen Sie sich vor der Behandlung bei Ihrer
-                Versicherung.
-            </p>
-        </div>
-
-        <div class="card-section">
-            <CardMassage
-                imgPath1="/img/massage1-opt.jpg"
-                href1="#"
-                title1="Klassische Massage"
-                body1={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", " Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", "Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-            />
-            <CardMassage
-                imgPath1="/img/massage2-opt.jpg"
-                href1="#"
-                title1="Entspannungsmassage"
-                body1={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-            />
-            <CardMassage
-                imgPath1="/img/massage3-opt.jpg"
-                href1="#"
-                title1="Klassische Massage"
-                body1={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
-            />
-        </div>
-        <!-- TODO get rid of top margin of 20px -->
         <!-- <div class="price-section">
             <h2>Preise</h2>
             <div class="prices">
@@ -64,6 +25,45 @@ import Footer from "../components/Footer.astro";
                 Versicherung.
             </p>
         </div> -->
+
+        <div class="card-section">
+            <CardMassage
+                imgPath1="/img/massage1-opt.jpg"
+                href1="#"
+                title1="Klassische Massage"
+                body1={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", "Die klassische Massage wird als KMT (klassische Massagetherapie) ärztlich verordnet. Mit verschiedenen Grifftechniken wie kneten, streichen, vibrieren etc. werden bei der klassischen Massage die Muskulatur und die oberflächlichen Gewebeschichten behandelt. Eine klassische Massage verleiht Kraft und Vitalität."]}
+                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.", "Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+            />
+            <CardMassage
+                imgPath1="/img/massage2-opt.jpg"
+                href1="#"
+                title1="Entspannungsmassage"
+                body1={["Bei einer Entspannungsmassage werden durch langsame und rhythmischen Knetungen und Streichungen des Gewebes die Durchblutung der Haut, Muskulatur und der Sehnen angeregt. Verhärtungen der Muskulatur werden weicher, Blockaden und Verspannungen lösen sich auf und Entspannung und Wohlbefinden stellt sich ein."]}
+                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+            />
+            <CardMassage
+                imgPath1="/img/massage3-opt.jpg"
+                href1="#"
+                title1="Sportmassage"
+                body1={["Die Sportmassage ist eine Art der Massage, die im Bereich des Sports einerseits zur Leistungssteigerung durch die verbesserte Regeneration nach Belastungen, andererseits zur Vermeidung von Verletzungen angewendet wird."]}
+                body2={["Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."]}
+            />
+        </div>
+        <!-- TODO get rid of top margin of 20px -->
+        <div class="price-section">
+            <h2>Preise</h2>
+            <div class="prices">
+                <p>Klassische Massage 120 CHF pro 60 Minuten</p>
+                <p>Entspannungsmassage 120 CHF pro 60 Minuten</p>
+                <p>Sportmassage 120 CHF pro 60 Minuten</p>
+            </div>
+            <p>
+                Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
+                Zusatzversicherung die Kosten einer Massage voll oder zum Teil.
+                Bitte erkundigen Sie sich vor der Behandlung bei Ihrer
+                Versicherung.
+            </p>
+        </div>
         <Footer />
     </main>
 </Layout>
@@ -126,12 +126,9 @@ import Footer from "../components/Footer.astro";
 
         .price-section {
             padding: 0 20px 20px 20px;
-        }
-        
-        .price-section {
             text-align: left;
         }
-
+        
         .prices p {
         font-size: 14px;
         font-weight: 600;
