made a fixed header, a header changing a color on scroll

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/about/">Über mich</a></li>
       <li><a href="/massage/">Massage</a></li>
-      <li><a href="#contact">Kontakte</a></li>
+      <li><a href="/contacts/">Kontakte</a></li>
     </ul>
     <a href="https://emr.ch/therapeut/elena.schaller" target="_blank">
       <img src="/img/emr-rme-grey.jpg" alt="EMR/AMR zertifiziert" class="emr">
