--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -8,116 +8,117 @@ import { Icon } from "astro-icon";
 <Layout title="VitaLena">
     <main>
         <Banner />
-        <div class="page-title">
-            <h1>Kontakte</h1>
-        </div>
-        <div class="address-map">
-            <div class="addr-item1">
-                <div class="icon-text">
-                    <Icon name="fa-solid:home" class="addr-icon home-icon" />
-                    <div>
-                        <div class="addr-place">
-                            <p>Praxisraum</p>
-                            <p>in Weiach</p>
+        <div class="contacts">
+            <div class="page-title">
+                <h1>Kontakte</h1>
+            </div>
+            <div class="address-map">
+                <div class="addr-item1">
+                    <div class="icon-text">
+                        <Icon name="fa-solid:home" class="addr-icon home-icon" />
+                        <div>
+                            <div class="addr-place">
+                                <p>Praxisraum</p>
+                                <p>in Weiach</p>
+                            </div>
+                            <p>
+                                <a
+                                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                                    target="_blank"
+                                >
+                                    Im See 3
+                                </a>
+                            </p>
+                            <p>
+                                <a
+                                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                                    target="_blank"
+                                >
+                                    8187 Weiach
+                                </a>
+                            </p>
                         </div>
-                        <p>
-                            <a
-                                href="https://goo.gl/maps/SronJErekN9ETXpL9"
-                                target="_blank"
-                            >
-                                Im See 3
-                            </a>
-                        </p>
-                        <p>
-                            <a
-                                href="https://goo.gl/maps/SronJErekN9ETXpL9"
-                                target="_blank"
-                            >
-                                8187 Weiach
-                            </a>
-                        </p>
+                    </div>
+                    <div class="icon-text">
+                        <Icon name="fa-solid:phone-alt" class="addr-icon" />
+                        <a href="tel:+41795648109" target="_blank">
+                            +41 (0)79 564 81 09
+                        </a>
+                    </div>
+                    <div class="icon-text icon-text-last">
+                        <Icon name="fa-solid:envelope" class="addr-icon" />
+                        <a
+                            href="mailto:elena_schaller@swissonline.ch"
+                            target="_blank"
+                        >
+                            elena_schaller@swissonline.ch
+                        </a>
                     </div>
                 </div>
-                <div class="icon-text">
-                    <Icon name="fa-solid:phone-alt" class="addr-icon" />
-                    <a href="tel:+41795648109" target="_blank">
-                        +41 (0)79 564 81 09
-                    </a>
-                </div>
-                <div class="icon-text icon-text-last">
-                    <Icon name="fa-solid:envelope" class="addr-icon" />
-                    <a
-                        href="mailto:elena_schaller@swissonline.ch"
-                        target="_blank"
-                    >
-                        elena_schaller@swissonline.ch
-                    </a>
-                </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2692.222292543229!2d8.4247139!3d47.5634632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479071c89afe7add%3A0x2d543a607ce5109b!2sIm%20See%203%2C%208187%20Weiach!5e0!3m2!1sen!2sch!4v1679263269765!5m2!1sen!2sch"
+                    width="500"
+                    height="300"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
             </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2692.222292543229!2d8.4247139!3d47.5634632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479071c89afe7add%3A0x2d543a607ce5109b!2sIm%20See%203%2C%208187%20Weiach!5e0!3m2!1sen!2sch!4v1679263269765!5m2!1sen!2sch"
-                width="500"
-                height="300"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-            >
-            </iframe>
-        </div>
-        <div class="address-map">
-            <div class="addr-item2">
-                <div class="icon-text">
-                    <Icon name="fa-solid:home" class="addr-icon home-icon" />
-                    <div>
-                        <div class="addr-place">
-                            <p>SALZGROTTE</p>
-                            <a href="https://salzgrotte.ch" target="_blank">
-                                salzgrotte.ch
-                            </a>
+            <div class="address-map">
+                <div class="addr-item2">
+                    <div class="icon-text">
+                        <Icon name="fa-solid:home" class="addr-icon home-icon" />
+                        <div>
+                            <div class="addr-place">
+                                <p>SALZGROTTE</p>
+                                <a href="https://salzgrotte.ch" target="_blank">
+                                    salzgrotte.ch
+                                </a>
+                            </div>
+                            <p>
+                                <a
+                                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                                    target="_blank"
+                                >
+                                    Lindenstrasse 23
+                                </a>
+                            </p>
+                            <p>
+                                <a
+                                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                                    target="_blank"
+                                >
+                                    8302 Kloten
+                                </a>
+                            </p>
                         </div>
-                        <p>
-                            <a
-                                href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
-                                target="_blank"
-                            >
-                                Lindenstrasse 23
-                            </a>
-                        </p>
-                        <p>
-                            <a
-                                href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
-                                target="_blank"
-                            >
-                                8302 Kloten
-                            </a>
-                        </p>
+                    </div>
+                    <div class="icon-text">
+                        <Icon name="fa-solid:phone-alt" class="addr-icon" />
+                        <a href="tel:+41445505555" target="_blank">
+                            +41 (0)44 550 55 55
+                        </a>
+                    </div>
+                    <div class="icon-text icon-text-last">
+                        <Icon name="fa-solid:envelope" class="addr-icon" />
+                        <a href="mailto:info@salzgrotte.ch" target="_blank"
+                            >info@salzgrotte.ch</a
+                        >
                     </div>
                 </div>
-                <div class="icon-text">
-                    <Icon name="fa-solid:phone-alt" class="addr-icon" />
-                    <a href="tel:+41445505555" target="_blank">
-                        +41 (0)44 550 55 55
-                    </a>
-                </div>
-                <div class="icon-text icon-text-last">
-                    <Icon name="fa-solid:envelope" class="addr-icon" />
-                    <a href="mailto:info@salzgrotte.ch" target="_blank"
-                        >info@salzgrotte.ch</a
-                    >
-                </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.0629521094816!2d8.585375799999998!3d47.449712299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a9ff24aa526c7%3A0xcf18b03a3a02f0fc!2sLindenstrasse%2023%2C%208302%20Kloten!5e0!3m2!1sen!2sch!4v1679263639898!5m2!1sen!2sch"
+                    width="500"
+                    height="300"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.0629521094816!2d8.585375799999998!3d47.449712299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a9ff24aa526c7%3A0xcf18b03a3a02f0fc!2sLindenstrasse%2023%2C%208302%20Kloten!5e0!3m2!1sen!2sch!4v1679263639898!5m2!1sen!2sch"
-                width="500"
-                height="300"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
         </div>
-
         <Footer />
     </main>
 </Layout>
@@ -128,6 +129,10 @@ import { Icon } from "astro-icon";
         max-width: 1100px;
         height: 100%;
         background-color: #efd3d7;
+    }
+
+    .contacts {
+        padding-top: 104px;
     }
 
     h1,
@@ -201,6 +206,10 @@ import { Icon } from "astro-icon";
     }
 
     @media (max-width: 600px) {
+        .contacts {
+            padding-top: 70px;
+        }
+        
         .page-title {
             padding: 20px;
             text-align: center;
