--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -9,8 +9,10 @@ import Menu from "./Menu.astro";
     .banner {
         background-color: #CBC0D3;
         padding: 20px 40px;
-        /* position: fixed; */
-        /* width: 100%; */
+        position: fixed;
+        width: 100%;
+        max-width: 1100px;
+        box-sizing: border-box;
     }
 
     @media (max-width: 600px) {
