--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,11 @@ const { title } = Astro.props;
 		line-height: 1.2;
 		margin: 0 auto;
 		max-width: 1100px;
+		/* box-sizing: border-box; */
+	}
+
+	body {
+		box-sizing: border-box;
 	}
 
 	code {
